...
    
    var isControlEnabled: MutableProperty<Bool>
    
    var signal: Signal<Bool, NoError>!
    
    var placeholderStringOne: String {
        return "Text one"
    }
    
    var placeholderStringTwo: String {
        return "Text two"
    }
    
    var input: ViewModelInput {
        return self
    }
    
...
