...
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BtR-Uq-3s3">
                                <rect key="frame" x="147" y="159" width="80" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="80" id="jix-Lk-Eko"/>
                                </constraints>
                                <state key="normal" title="Submit"/>
                            </button>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="BtR-Uq-3s3" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="139" id="PXr-DY-gfl"/>
                            <constraint firstItem="BtR-Uq-3s3" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="kTk-ea-krJ"/>
...
